--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "@mantine/core": "^7.6.1",
     "@mantine/hooks": "^7.6.1",
     "@pbe/react-yandex-maps": "^1.2.5",
+    "@tabler/icons-react": "^3.1.0",
+    "@uidotdev/usehooks": "^2.4.1",
     "bulma": "^0.9.4",
     "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "lorem-ipsum": "^2.0.8",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "react-uuid": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
